--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -48,7 +48,37 @@
                                         <p class="my-0">${{ item.product.price }}</p>
                                     </td>
                                     <td class="p-3">
-                                        <p class="my-0 w-25">{{ item.quantity }}</p>
+                                        <form method="POST" class="form update-form" action="">
+                                            {% csrf_token %}
+                                            <div class="form-group">
+                                                <div class="input-group">
+                                                    <div class="input-group-prepend">
+                                                        <button class="decrement-qty btn btn-sm btn-black rounded-0" 
+                                                        data-item_id="{{ item.item_.id }}" id="decrement-qty_{{ item.item_.id }}">
+                                                            <span>
+                                                                <i class="fas fa-minus fa-sm"></i>
+                                                            </span>
+                                                        </button>
+                                                    </div>
+                                                    <input class="form-control form-control-sm qty_input" type="number" 
+                                                    name="quantity" value="{{item.quantity}}" min="1" max="99" 
+                                                    data-item_id="{{ item.item_.id }}" id="id_qty_{{ item.item_.id }}">
+                                                    <div class="input-group-append">
+                                                        <button class="increment-qty btn btn-sm btn-black rounded-0" 
+                                                        data-item_id="{{ item.item_.id }}" id="increment-qty_{{ item.item_.id }}">
+                                                            <span>
+                                                                <i class="fas fa-plus fa-sm"></i>
+                                                            </span>
+                                                        </button>
+                                                    </div>  
+                                                    {% if item.product.has_sizes %}
+                                                        <input type="hidden" name="product_size" value="{{ item.size }}">
+                                                    {% endif %}
+                                                </div>
+                                            </div>                                            
+                                        </form>
+                                        <a class="update-link text-info" href=""><small>Update</small></a>
+                                        <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-size="{{ item.size }}" href=""><small>Remove</small></a>                                        
                                     </td>
                                     <td class="p-3">
                                         <p class="my-0">${{ item.product.price }}</p>
@@ -97,4 +127,30 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
+
+<script>
+    $('.update-link').click(function(e){
+        var form = $(this).prev('.update-form');
+        form.submit();
+    })
+
+    $('.remove-item').click(function(e){
+        var csrfToken = "{{ csrf_token }}";
+        var itemId = $(this).attr('id').split('remove_')[1];
+        var size = $(this).data('size');
+        var url = `/bag/remove/${itemId}`;
+        var date = {'csrfmiddlewaretoken': csrfToken, 'size': size};
+
+        $.post(url, data)
+        .done(function(){
+            location.reload();
+        });
+    })
+</script>
+
 {% endblock %}
