--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -30,7 +30,7 @@
                                     <th scope="col">Product Info</th>
                                     <th scope="col"></th>
                                     <th scope="col">Price</th>
-                                    <th scope="col">Quantity</th>
+                                    <th scope="col">Qty</th>
                                     <th scope="col">Subtotal</th>
                                 </tr>
                             </thead>
@@ -48,24 +48,24 @@
                                         <p class="my-0">${{ item.product.price }}</p>
                                     </td>
                                     <td class="p-3">
-                                        <form method="POST" class="form update-form" action="">
+                                        <form method="POST" class="form update-form" action="{% url 'adjust_bag' item.item_id %}">
                                             {% csrf_token %}
                                             <div class="form-group">
                                                 <div class="input-group">
                                                     <div class="input-group-prepend">
                                                         <button class="decrement-qty btn btn-sm btn-black rounded-0" 
-                                                        data-item_id="{{ item.item_.id }}" id="decrement-qty_{{ item.item_.id }}">
+                                                        data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
                                                             <span>
                                                                 <i class="fas fa-minus fa-sm"></i>
                                                             </span>
                                                         </button>
                                                     </div>
                                                     <input class="form-control form-control-sm qty_input" type="number" 
-                                                    name="quantity" value="{{item.quantity}}" min="1" max="99" 
-                                                    data-item_id="{{ item.item_.id }}" id="id_qty_{{ item.item_.id }}">
+                                                    name="quantity" value="{{ item.quantity }}" min="1" max="99" 
+                                                    data-item_id="{{ item.item_id }}" id="id_qty_{{ item.item_id }}">
                                                     <div class="input-group-append">
                                                         <button class="increment-qty btn btn-sm btn-black rounded-0" 
-                                                        data-item_id="{{ item.item_.id }}" id="increment-qty_{{ item.item_.id }}">
+                                                        data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
                                                             <span>
                                                                 <i class="fas fa-plus fa-sm"></i>
                                                             </span>
@@ -77,8 +77,8 @@
                                                 </div>
                                             </div>                                            
                                         </form>
-                                        <a class="update-link text-info" href=""><small>Update</small></a>
-                                        <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-size="{{ item.size }}" href=""><small>Remove</small></a>                                        
+                                        <a class="update-link text-info"><small>Update</small></a>
+                                        <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><small>Remove</small></a>                                        
                                     </td>
                                     <td class="p-3">
                                         <p class="my-0">${{ item.product.price }}</p>
@@ -133,7 +133,7 @@
 {{ block.super }}
 {% include 'products/includes/quantity_input_script.html' %}
 
-<script>
+<script type="text/javascript">
     $('.update-link').click(function(e){
         var form = $(this).prev('.update-form');
         form.submit();
@@ -142,15 +142,14 @@
     $('.remove-item').click(function(e){
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
-        var size = $(this).data('size');
-        var url = `/bag/remove/${itemId}`;
-        var date = {'csrfmiddlewaretoken': csrfToken, 'size': size};
+        var size = $(this).data('product_size');
+        var url = `/bag/remove/${itemId}/`;
+        var data = {'csrfmiddlewaretoken': csrfToken, 'product_size': size};
 
         $.post(url, data)
-        .done(function(){
+         .done(function() {
             location.reload();
         });
     })
 </script>
-
 {% endblock %}
